tree-sitter-ora/grammar.js
    source_file: ($) => repeat($._top_level_declaration),

    _top_level_declaration: ($) => choice(
      $.contract_declaration,
      $.function_declaration,
      $.variable_declaration,
      $.struct_declaration,
      $.bitfield_declaration,
      $.enum_declaration,
      $.log_declaration,
      $.import_declaration,
      $.error_declaration,
      $.ghost_declaration,
      $.contract_invariant,
    ),

    contract_declaration: ($) => seq(
      "contract",
      field("name", $.identifier),
      optional(field("type_parameters", $.generic_parameter_clause)),
      "{",
      repeat($.contract_member),
      "}",
    ),

    contract_member: ($) => choice(
      $.variable_declaration,
      $.function_declaration,
      $.log_declaration,
      $.struct_declaration,
      $.bitfield_declaration,
      $.enum_declaration,
      $.error_declaration,
      $.ghost_declaration,
      $.contract_invariant,
    ),

    function_declaration: ($) => seq(
      optional("pub"),
      "fn",
      field("name", choice($.identifier, "init")),
      "(",
      optional($.parameter_list),
      ")",
      optional($.return_type),
      repeat($.requires_clause),
      repeat($.ensures_clause),
      field("body", choice(
        $.block,
        $.return_statement,
      )),
    ),

    parameter_list: ($) => seq(
      $.parameter,
      repeat(seq(",", $.parameter)),
      optional(","),
    ),

    parameter: ($) => seq(
      optional(field("modifier", $.parameter_modifier)),
      field("name", $.identifier),
      ":",
      field("type", $.type),
    ),

    parameter_modifier: (_) => "comptime",

    return_type: ($) => seq("->", field("type", $.type)),
    variable_declaration: ($) => choice(
      seq(
        optional($.memory_region),
        field("kind", $.variable_kind),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),
      seq(
        field("region", $.memory_region),
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),
      seq(
        field("name", $.identifier),
        ":",
        field("type", $.type),
        optional(seq("=", field("value", $._expression))),
        ";",
      ),
    ),

    memory_region: (_) => choice("storage", "memory", "tstore", "calldata"),
    variable_kind: (_) => choice("var", "let", "const", "immutable"),

    struct_declaration: ($) => seq(
      "struct",
      field("name", $.identifier),
      optional(field("type_parameters", $.generic_parameter_clause)),
      "{",
      repeat($.struct_field),
      "}",
    ),

    generic_parameter_clause: ($) => seq(
      "(",
      optional($.parameter_list),
      ")",
    ),

    struct_field: ($) => seq(
      field("name", $.identifier),
      ":",
      field("type", $.type),
      ";",
    ),

    type: ($) => choice(
      $.error_union_type,
      $.plain_type,
    ),

    plain_type: ($) => choice(
      $.primitive_type,
      $.map_type,
      $.array_type,
      $.slice_type,
      $.tuple_type,
      $.anonymous_struct_type,
      $.generic_type,
      $.identifier,
    ),

    primitive_type: (_) => choice(
      "u8", "u16", "u32", "u64", "u128", "u256",
      "i8", "i16", "i32", "i64", "i128", "i256",
      "bool", "address", "string", "bytes", "void",
    ),

    type_argument: ($) => choice(
      $.type,
      $.number_literal,
    ),

    generic_type: ($) => seq(
      field("name", $.identifier),
      field("arguments", choice(
        $.type_argument_list_angle,
        $.type_argument_list_paren,
      )),
    ),

    type_argument_list_paren: ($) => seq(
      "(",
      commaSep1($.type_argument),
      optional(","),
      ")",
    ),

    map_type: ($) => choice(
      seq(
        "map",
        "<",
        field("key", $.type),
        ",",
        field("value", $.type),
        ">",
      ),
      seq(
        "map",
        "(",
        field("key", $.type),
        ",",
        field("value", $.type),
        ")",
      ),
    ),

    tuple_type: ($) => seq(
      "(",
      $.type,
      ",",
      $.type,
      repeat(seq(",", $.type)),
      optional(","),
      ")",
    ),

    _statement: ($) => choice(
      $.variable_declaration,
      $.tuple_variable_declaration,
      $.assignment_statement,
      $.compound_assignment_statement,
      $.destructuring_assignment,
      $.requires_statement,
      $.ensures_statement,
      $.assume_statement,
      $.havoc_statement,
      $.expression_statement,
      $.comptime_statement,
      $.if_statement,
      $.while_statement,
      $.for_statement,
      $.switch_statement,
      $.return_statement,
      $.break_statement,
      $.continue_statement,
      $.log_statement,
      $.lock_statement,
      $.unlock_statement,
      $.try_statement,
      $.assert_statement,
      $.labeled_block,
      $.block,
    ),

    assignment_statement: ($) => seq(
      field("left", $.lvalue),
      "=",
      field("right", $._expression),
      ";",
    ),

    tuple_variable_declaration: ($) => seq(
      field("kind", $.variable_kind),
      field("pattern", $.tuple_pattern),
      optional(seq(":", field("type", $.type))),
      optional(seq("=", field("value", $._expression))),
      ";",
    ),

    tuple_pattern: ($) => seq(
      "(",
      $.identifier,
      repeat(seq(",", $.identifier)),
      optional(","),
      ")",
    ),

    assume_statement: ($) => seq(
      "assume",
      "(",
      field("condition", $._expression),
      ")",
      ";",
    ),

    havoc_statement: ($) => seq(
      "havoc",
      field("target", $.lvalue),
      ";",
    ),

    comptime_statement: ($) => seq(
      "comptime",
      choice(
        $.while_statement,
        $.for_statement,
        $.if_statement,
      ),
    ),

    while_statement: ($) => seq(
      "while",
      "(",
      field("condition", $._expression),
      ")",
      repeat(choice(
        $.invariant_clause,
        $.decreases_clause,
      )),
      field("body", $._statement),
    ),

    invariant_clause: ($) => seq("invariant", "(", field("condition", $._expression), ")"),
    decreases_clause: ($) => seq("decreases", "(", field("measure", $._expression), ")"),

    return_statement: ($) => seq("return", optional($._expression), ";"),

    block: ($) => seq("{", repeat($._statement), "}"),

    _expression: ($) => choice(
      $.assignment_expression,
      $.binary_expression,
      $.unary_expression,
      $.postfix_expression,
      $.primary_expression,
    ),

    binary_expression: ($) => choice(
      prec.right(PREC.RANGE, seq($._expression, "..", $._expression)),
      prec.left(PREC.LOGICAL_OR, seq($._expression, "||", $._expression)),
      prec.left(PREC.LOGICAL_AND, seq($._expression, "&&", $._expression)),
      prec.left(PREC.BIT_OR, seq($._expression, "|", $._expression)),
      prec.left(PREC.BIT_XOR, seq($._expression, "^", $._expression)),
      prec.left(PREC.BIT_AND, seq($._expression, "&", $._expression)),
      prec.left(PREC.EQUALITY, seq($._expression, choice("==", "!="), $._expression)),
      prec.left(PREC.RELATIONAL, seq($._expression, choice("<", "<=", ">", ">="), $._expression)),
      prec.left(PREC.SHIFT, seq($._expression, choice("<<", ">>", "<<%", ">>%"), $._expression)),
      prec.left(PREC.ADDITIVE, seq($._expression, choice("+", "-", "+%", "-%"), $._expression)),
      prec.left(PREC.MULTIPLICATIVE, seq($._expression, choice("*", "/", "%", "*%"), $._expression)),
      prec.right(PREC.EXPONENT, seq($._expression, choice("**", "**%"), $._expression)),
    ),

    postfix_expression: ($) => prec.left(PREC.POSTFIX, seq(
      $.primary_expression,
      repeat1($.postfix_operator),
    )),

    postfix_operator: ($) => choice(
      seq(".", choice($.identifier, $.field_index)),
      seq("[", $._expression, "]"),
      seq("(", optional($.expression_list), ")"),
    ),

    lvalue: ($) => seq(
      choice(
        $.identifier,
        seq("(", $.lvalue, ")"),
      ),
      repeat(choice(
        seq(".", choice($.identifier, $.field_index)),
        seq("[", $._expression, "]"),
      )),
    ),

    primary_expression: ($) => choice(
      $.literal,
      $.identifier,
      $.error_identifier,
      $.parenthesized_expression,
      $.tuple_expression,
      $.try_expression,
      $.old_expression,
      $.comptime_expression,
      $.cast_expression,
      $.intrinsic_expression,
      $.error_expression,
      $.quantified_expression,
      $.anonymous_struct_literal,
      $.struct_literal,
      $.switch_expression,
      $.array_literal,
    ),

    literal: ($) => choice(
      $.bool_literal,
      $.number_literal,
      $.bytes_literal,
      $.string_literal,
    ),

    intrinsic_expression: ($) => seq(
      "@",
      field("name", $.identifier),
      "(",
      optional($.expression_list),
      ")",
    ),

    struct_literal: ($) => seq(
      field("name", choice(
        $.identifier,
        $.generic_type,
      )),
      field("fields", $.struct_literal_fields),
    ),

    struct_literal_fields: ($) => seq("{", optional($.struct_literal_field_list), "}"),

    struct_literal_field_list: ($) => seq(
      $.struct_literal_field,
      repeat(seq(",", $.struct_literal_field)),
      optional(","),
    ),

    struct_literal_field: ($) => choice(
      seq(
        field("name", $.identifier),
        ":",
        field("value", $._expression),
      ),
      seq(
        ".",
        field("name", $.identifier),
        "=",
        field("value", $._expression),
      ),
    ),

    tuple_expression: ($) => seq(
      "(",
      $._expression,
      ",",
      $._expression,
      repeat(seq(",", $._expression)),
      optional(","),
      ")",
    ),

    expression_list: ($) => seq(
      $._expression,
      repeat(seq(",", $._expression)),
      optional(","),
    ),

    number_literal: (_) => choice(
      /0x[0-9A-Fa-f][0-9A-Fa-f_]*/,
      /0b[01][01_]*/,
      /[0-9][0-9_]*/,
    ),

    identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,
  },
})

function commaSep1(rule) {
  return seq(rule, repeat(seq(",", rule)))
}
